--- a/index.html
+++ b/index.html
@@ -10,20 +10,28 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     :root{
-      --bg:#0b0e14; --panel:#121826; --ink:#e6e9ef; --muted:#b6c0d1; --accent:#78a6ff; --chip:#1a2133; --link:#9ec1ff; --rule:#273047; --tag:#2a3552;
+      --bg:#ffffff; 
+      --panel:#ffffff; 
+      --ink:#000000; 
+      --muted:#333333; 
+      --accent:#000000; 
+      --chip:#f5f5f5; 
+      --link:#0000ee; 
+      --rule:#cccccc; 
+      --tag:#eaeaea;
     }
     html,body{margin:0;height:100%;background:var(--bg);color:var(--ink);font-family:Inter,system-ui,-apple-system,Segoe UI,Roboto,Arial,Helvetica,sans-serif;}
     a{color:var(--link);text-decoration:none} a:hover{text-decoration:underline}
     .wrap{max-width:1100px;margin:0 auto;padding:28px 20px 56px}
-    header{position:sticky;top:0;background:linear-gradient(180deg,rgba(11,14,20,.95),rgba(11,14,20,.75));backdrop-filter:saturate(140%) blur(10px);z-index:5;border-bottom:1px solid var(--rule)}
+    header{position:sticky;top:0;background:linear-gradient(180deg,rgba(255,255,255,.95),rgba(255,255,255,.75));backdrop-filter:saturate(140%) blur(10px);z-index:5;border-bottom:1px solid var(--rule)}
     .bar{max-width:1100px;margin:0 auto;padding:12px 20px;display:flex;gap:16px;align-items:center;justify-content:space-between}
     .name{font-weight:800;letter-spacing:.3px}
     nav{display:flex;flex-wrap:wrap;gap:14px}
-    nav a{padding:8px 10px;border-radius:999px;background:var(--chip);border:1px solid var(--rule);font-size:13px}
+    nav a{padding:8px 10px;border-radius:999px;background:var(--chip);border:1px solid var(--rule);font-size:13px;color:var(--ink);}
     .hero{display:grid;gap:18px;margin:26px 0 18px}
     .hero h1{font-size:34px;line-height:1.15;margin:0;font-weight:800}
     .hero p{margin:0;font-size:16px;color:var(--muted)}
-    .quick a{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:10px;background:var(--chip);border:1px solid var(--rule);font-size:14px;margin-right:8px}
+    .quick a{display:inline-flex;align-items:center;gap:8px;padding:8px 12px;border-radius:10px;background:var(--chip);border:1px solid var(--rule);font-size:14px;margin-right:8px;color:var(--ink);}
     section{margin:28px 0;padding:22px;border:1px solid var(--rule);border-radius:16px;background:var(--panel)}
     h2{margin:0 0 16px;font-size:20px;letter-spacing:.2px}
     .item{display:grid;gap:8px;margin:16px 0}
