Logos are added

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@
       <h2>Experience</h2>
 
       <div class="item">
-        <div class="title">Member of Technical Staff &amp; Systems Engineer — Texas Instruments</div>
+        <div class="title">
+          <img src="./logo/TI_logo.svg" alt="Texas Instruments Logo" style="height:32px; vertical-align:middle; margin-right:8px;"> Member of Technical Staff &amp; Systems Engineer — Texas Instruments
+        </div>
         <div class="meta">Dallas, TX · Jan 2020 – Present (Member of Technical Staff since Jan 2023)</div>
         <ul class="bullets">
           <li>#1 contributor to TI's radar algorithms Git repository that maintains proprietary solutions for various end‑to‑end applications. The processing chains built are featured in TI’s SDKs as out‑of‑the‑box demos; bit‑exact algorithm frameworks in Matlab and C became foundational to the Radar R&amp;D team; solutions are adopted by numerous customers as a reference design. Many works awarded at TI internal venues (worldwide).</li>
@@ -127,7 +129,9 @@
       </div>
 
       <div class="item">
-        <div class="title">Software Engineering Intern — Microsoft</div>
+        <div class="title">
+          <img src="./logo/Microsoft_logo.svg" alt="Microsoft Logo" style="height:32px; vertical-align:middle; margin-right:8px;"> Software Engineering Intern — Microsoft
+        </div>
         <div class="meta">HoloLens · May 2019 – Aug 2019</div>
         <ul class="bullets">
           <li>Designed and implemented a messaging protocol and a comprehensive debug toolset for the next‑generation HoloLens display firmware in a distributed team (code reviews, branching strategies, Git).</li>
