--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     .rule{height:1px;background:var(--rule);margin:10px 0 0}
     .chips{margin-top:4px}
     .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace}
+    .hl{color:#0b5bd3;font-weight:700}
     @media (max-width:900px){.grid-2{grid-template-columns:1fr}}
     footer{opacity:.8;text-align:center;margin:24px 0 0;font-size:13px;color:var(--muted)}
   </style>
@@ -78,28 +79,20 @@
 
     <section id="profile">
       <h2>Profile</h2>
-      <p>
-        Muhammet has 9 years of PhD‑level applied research experience in developing and implementing cutting‑edge algorithms for mmWave radars (specialized in imaging, detection, multi‑target tracking, object classification, and sensor fusion), with the past 5.5 years at TI Radar R&amp;D and previously at UT/Dallas TxACE lab. As one of the top algorithm experts in the TI Radar R&amp;D, he is recognized for his technical leadership, vision, and innovation, with strong experience in signal processing, edge‑AI, and embedded software implementation for real‑time perception from concept to production. He has pioneered multiple innovative R&amp;D projects across key business segments, including industrial, robotics, and automotive, and the novel solutions he developed (best fit for the SoC architectures) have been deployed on thousands of devices worldwide. Currently, he is developing the full‑stack perception layer of TI's automotive radar SoCs for next‑generation ADAS applications.
-      </p>
-      <p>
-        He brings 15 years of experience in embedded software development (C and C++ (11/14/17)) and system architecture at TI, Microsoft, and Aselsan. Successfully contributed to multi‑national, cross‑functional engineering teams delivering safety‑ and performance‑critical real‑time embedded software applications (coding, testing, debugging) on ARM (R4F/M4F), Xtensa (LX6/LX7), TI DSPs (C674x/C66x), CUDA‑enabled GPUs, and multi‑core platforms. Demonstrated proven expertise across multiple real‑time operating systems (FreeRTOS, TI‑RTOS, and XOS). In addition to the individual technical contributions, he also leveraged strong leadership skills to cultivate highly effective, collaborative, and synergistic interdisciplinary teams.
-      </p>
-      <p>
-        Founded and led a high‑performing team for 4+ years with funding from the TUBITAK Young Entrepreneur Program to develop fully autonomous smart drones (quadcopters) from concept to prototype. Directed end‑to‑end system design, integrating multiple perception sensors (IMU, GPS, radar, stereo camera) and implementing robust real‑time C++ libraries for sensor fusion, navigation, localization, and advanced signal processing. Gained hands‑on expertise with robotic middleware (ROS/ROS2) and simulation workflows. Championed technical direction and team execution, delivering a novel fully functional drone platform that advanced state‑of‑the‑art sensing and motion planning technologies from scratch.
-      </p>
-      <p>
-        He authored 12 papers on IEEE conferences/transactions (with &gt;550 citations and &gt;60K reads), filed 3 patents as the first inventor (with several applications pending), gave &gt;30 talks at TI internal (TLC, TIITC, and FAE summits) and external (EdgeAI, TinyML, SRC, IEEE, etc.) conferences (awarded as best papers in 5 events), and authored numerous TI collaterals (white papers, application reports, user guides, etc.) on TI.com in the field of radar perception, signal processing, and deep learning. He is an active contributor to the open‑source community, having &gt;50K downloads of his works (MIMO‑SAR imaging toolboxes in Matlab, embedded SW solutions for smart autonomous drone development, etc.).
-      </p>
+      <ul class="bullets">
+        <li>Muhammet has <span class="hl">9 years of PhD‑level applied research experience</span> in developing and implementing cutting‑edge algorithms for <span class="hl">mmWave radars</span> (specialized in imaging, detection, multi‑target tracking, object classification, and sensor fusion), with the past 5.5 years at <strong>TI Radar R&amp;D</strong> and previously at <strong>UT/Dallas TxACE lab</strong>. As one of the top algorithm experts in the TI Radar R&amp;D, he is recognized for his technical leadership, vision, and innovation, with <span class="hl">strong experience in signal processing, edge‑AI, and embedded software implementation for real‑time perception</span> from concept to production. He has pioneered multiple innovative R&amp;D projects across key business segments, including industrial, robotics, and automotive, and the novel solutions he developed (best fit for the SoC architectures) have been deployed on thousands of devices worldwide. Currently, he is developing the full‑stack perception layer of TI's automotive radar SoCs for next‑generation ADAS applications.</li>
+        <li>He brings <span class="hl">15 years of experience in embedded software development</span> (C and C++ (11/14/17)) and system architecture at <strong>TI</strong>, <strong>Microsoft</strong>, and <strong>Aselsan</strong>. Successfully contributed to multi‑national, cross‑functional engineering teams delivering safety‑ and performance‑critical real‑time embedded software applications (coding, testing, debugging) on <strong>ARM (R4F/M4F)</strong>, <strong>Xtensa (LX6/LX7)</strong>, <strong>TI DSPs (C674x/C66x)</strong>, <strong>CUDA‑enabled GPUs</strong>, and multi‑core platforms. Demonstrated proven expertise across multiple real‑time operating systems (<strong>FreeRTOS</strong>, <strong>TI‑RTOS</strong>, and <strong>XOS</strong>). In addition to the individual technical contributions, he also leveraged strong leadership skills to cultivate highly effective, collaborative, and synergistic interdisciplinary teams.</li>
+        <li>Founded and led a high‑performing team for 4+ years with funding from the <strong>TUBITAK Young Entrepreneur Program</strong> to develop fully autonomous smart drones (quadcopters) from concept to prototype. Directed end‑to‑end system design, integrating multiple perception sensors (IMU, GPS, radar, stereo camera) and implementing robust real‑time C++ libraries for sensor fusion, navigation, localization, and advanced signal processing. Gained hands‑on expertise with robotic middleware (<strong>ROS/ROS2</strong>) and simulation workflows. Championed technical direction and team execution, delivering a novel fully functional drone platform that advanced state‑of‑the‑art sensing and motion planning technologies from scratch.</li>
+        <li>He authored <strong>12 papers</strong> on IEEE conferences/transactions (with &gt;550 citations and &gt;60K reads), filed <strong>3 patents as the first inventor</strong> (with several applications pending), gave &gt;30 talks at TI internal (TLC, TIITC, and FAE summits) and external (EdgeAI, TinyML, SRC, IEEE, etc.) conferences (awarded as best papers in 5 events), and authored numerous TI collaterals (white papers, application reports, user guides, etc.) on TI.com in the field of radar perception, signal processing, and deep learning. He is an active contributor to the open‑source community, having &gt;50K downloads of his works (MIMO‑SAR imaging toolboxes in Matlab, embedded SW solutions for smart autonomous drone development, etc.).</li>
+      </ul>
       <div class="chips">
-        <span class="tag">mmWave Radar</span>
-        <span class="tag">ADAS Perception</span>
-        <span class="tag">C/C++ (11/14/17)</span>
+        <span class="tag">Millimeter-Wave Radar</span>
+        <span class="tag">Computer Vision</span>
         <span class="tag">Edge AI</span>
+        <span class="tag">ADAS/Robotics Perception</span>
+        <span class="tag">C/C++ (11/14/17)</span>
         <span class="tag">Signal Processing</span>
-        <span class="tag">Real‑time Systems</span>
-        <span class="tag">TI DSPs C66x/C674x</span>
-        <span class="tag">ARM R4F/M4F</span>
-        <span class="tag">Xtensa LX6/LX7 · XOS</span>
+        <span class="tag">Real‑Time Systems</span>
         <span class="tag">FreeRTOS · TI‑RTOS</span>
         <span class="tag">ROS/ROS2</span>
         <span class="tag">CUDA</span>
