Logos are done.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Muhammet Emin Yanik, PhD — Resume</title>
-  <meta name="description" content="Resume site for Muhammet Emin Yanik, PhD — radar algorithms R&D, embedded systems, ADAS perception, mmWave, signal processing, edge AI." />
+  <meta name="description" content="Resume site for Muhammet Emin Yanik, PhD — 2025." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -108,7 +108,7 @@
 
       <div class="item">
         <div class="title">
-          <img src="./logo/TI_logo.svg" alt="Texas Instruments Logo" style="height:32px; vertical-align:middle; margin-right:8px;"> Member of Technical Staff &amp; Systems Engineer — Texas Instruments
+          <img src="./logo/TI_logo.svg" alt="Texas Instruments Logo" style="height:36px; vertical-align:middle; margin-right:8px;"> Member of Technical Staff &amp; Systems Engineer — Texas Instruments
         </div>
         <div class="meta">Jan 2020 – Present </div>
         <div class="subrole"><strong>Member of Technical Staff | <span class="when">January 2023 — Current</span></strong></div>
@@ -131,7 +131,7 @@
 
       <div class="item">
         <div class="title">
-          <img src="./logo/Microsoft_logo.svg" alt="Microsoft Logo" style="height:32px; vertical-align:middle; margin-right:8px;"> Software Engineering Intern — Microsoft
+          <img src="./logo/Microsoft_logo.svg" alt="Microsoft Logo" style="height:36px; vertical-align:middle; margin-right:8px;"> Software Engineering Intern — Microsoft
         </div>
         <div class="meta">May 2019 – Aug 2019</div>
           <ul class="bullets">
@@ -143,7 +143,9 @@
       </div>
 
       <div class="item">
-        <div class="title">Systems Engineering Intern — Texas Instruments</div>
+        <div class="title">
+          <img src="./logo/TI_logo.svg" alt="Texas Instruments Logo" style="height:36px; vertical-align:middle; margin-right:8px;"> Systems Engineering Intern — Texas Instruments
+        </div>
         <div class="meta">Feb 2019 – May 2019</div>
         <ul class="bullets">
           <li>Developed and demonstrated the first 3D holographic MIMO‑SAR imager prototype in the literature using TI's 4‑chip cascaded (192 elements) mmWave radar board and a custom two‑axis scanner (400 mm/s).</li>
@@ -153,7 +155,10 @@
       </div>
 
       <div class="item">
-        <div class="title">Research & Teaching Assistant — The University of Texas at Dallas (TxACE Lab)</div>
+        <div class="title">
+          <img src="./logo/UTD_logo.svg" alt="UT Dallas Logo" style="height:36px; vertical-align:middle; margin-right:8px;"> Research &amp; Teaching Assistant — The University of Texas at Dallas (TxACE Lab)
+        </div>
+        <div class="title"></div>
         <div class="meta">Aug 2016 – Feb 2019 · Aug 2019 – Dec 2019</div>
         <ul class="bullets">
           <li>Designed an ultrawideband 3D near‑field mmWave imaging system using MIMO‑SAR; demonstrated first 3D holographic imaging results in the literature with TI single‑chip sensors and custom SAR imagers (high‑speed radar‑scanner sync).</li>
@@ -165,7 +170,9 @@
       </div>
 
       <div class="item">
-        <div class="title">Co‑Founder & Technical Team Leader — Sidus Innovations (Start‑Up)</div>
+        <div class="title">
+          <img src="./logo/Sidus_logo.png" alt="Sidus Logo" style="height:36px; vertical-align:middle; margin-right:8px;"> Co‑Founder &amp Technical Team Leader — Sidus Innovations (Start‑Up)
+        </div>
         <div class="meta">Mar 2016 – Feb 2019</div>
         <ul class="bullets">
           <li>Founded a start‑up to develop autonomous smart drones funded by TUBITAK Young Entrepreneur Program ($50K). Built fully functional prototypes; 1st place Spirit of Innovation Technology & Business Plan Competition 2019 ($5K); 4th place NVIDIA Jetson Developer Challenge 2018 (80 countries).</li>
@@ -177,7 +184,9 @@
       </div>
 
       <div class="item">
-        <div class="title">Senior Embedded Systems Engineer — Aselsan (Defense News Top 50)</div>
+        <div class="title">
+          <img src="./logo/Aselsan_logo.png" alt="Aselsan Logo" style="height:36px; vertical-align:middle; margin-right:8px;"> Senior Embedded Systems Engineer — Aselsan (Defense News Top 50)
+        </div>
         <div class="meta">Jun 2007 – Jul 2016</div>
         <ul class="bullets">
           <li>Designed/implemented safety‑critical software (C++) and system products on Integrity RTOS for airborne platforms; built libraries for INS/GPS, airborne radar, and EO targeting; delivered sensor‑fusion, navigation, localization, control, and signal‑processing algorithms.</li>
