TI intern section updated.

--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@
           <img src="./logo/TI_logo.svg" alt="Texas Instruments Logo" style="height:36px; vertical-align:middle; margin-right:8px;">
           <span><strong>Systems Engineering Intern</strong> | Texas Instruments</span>
         </div>
-        <div class="meta">Feb 2019 – May 2019</div>
+        <div class="meta">February 2019 — May 2019</div>
         <ul class="bullets">
-          <li>Developed and demonstrated the first 3D holographic MIMO‑SAR imager prototype in the literature using TI's 4‑chip cascaded (192 elements) mmWave radar board and a custom two‑axis scanner (400 mm/s).</li>
-          <li>Extended a Matlab‑based toolbox (originally for single‑chip sensors) to 4‑chip cascaded sensors with enhanced real‑time capture, near‑field calibration, and advanced reconstruction; produced the first real 3D holographic SAR images in the market — tools now used by customers and researchers worldwide.</li>
-          <li>Proposed a new 4‑chip cascaded antenna layout for near‑field; developed a novel algorithm enabling real‑world high‑resolution radar imaging with large MIMO apertures in near range; characterized system performance via measurements & simulations.</li>
+          <li><span class="hl">Developed and demonstrated the first 3D holographic MIMO‑SAR imager prototype in the literature</span>, utilizing TI's 4‑chip cascaded (192 elements) mmWave radar board and a custom‑built two‑axis scanner (optimized to operate at 400mm/s).</li>
+          <li>Leveraged the comprehensive <strong>Matlab‑based signal processing toolbox</strong> (originally developed for single‑chip sensors) for the 4‑chip cascaded sensors (with enhanced real‑time data capture, near‑field calibration, and advanced image reconstruction modules) and created the <strong>first real 3D holographic SAR images in the market</strong>. The developed solution (testbed design, software tools, algorithms, etc.) is being used by many customers and researchers worldwide.</li>
+          <li>Proposed a new <strong>4‑chip cascaded antenna layout</strong> design optimized for near‑field applications. <span class="hl">Developed a novel algorithm to enable real‑world high‑resolution radar imaging with large MIMO apertures in near‑range</span>. Characterized the system performance in different aspects with real measurements and simulations.</li>
         </ul>
       </div>
 
