UTD, Sidus, Aselsan sections are completed.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     .rule{height:1px;background:var(--rule);margin:10px 0 0}
     .chips{margin-top:4px}
     .mono{font-family: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace}
-    .hl{color:#0b5bd3;font-weight:700}
+    .hl{color:#0b5bd3;font-weight:600}
     .subrole{font-weight:600;margin-top:8px}
     .when{font-weight:700}
     @media (max-width:900px){.grid-2{grid-template-columns:1fr}}
@@ -166,11 +166,11 @@
         <div class="title"></div>
         <div class="meta">Aug 2016 – Feb 2019 · Aug 2019 – Dec 2019</div>
         <ul class="bullets">
-          <li>Designed an ultrawideband 3D near‑field mmWave imaging system using MIMO‑SAR; demonstrated first 3D holographic imaging results in the literature with TI single‑chip sensors and custom SAR imagers (high‑speed radar‑scanner sync).</li>
-          <li>Built a comprehensive Matlab signal‑processing toolbox: automated data capture, calibration, and efficient near‑field 3D holographic reconstruction (50K+ downloads).</li>
-          <li>Conducted measurements with IWR1443, IWR6843; built Matlab repos used widely by researchers; performed FMCW chirp‑level trade studies for imaging performance.</li>
-          <li>Developed array‑signal‑processing for calibration, interference mitigation, and sky imaging for radio astronomy; produced the first sky image from LoFASM station data and created geolocalization algorithms for radio interferometers.</li>
-          <li>Teaching assistant for EE/TE3350 Communications Systems (signals & LTI systems, Fourier series/transform, baseband/passband representations, AM/FM, sampling).</li>
+          <li>Designed an ultrawideband 3D near-field mmWave imaging system utilizing MIMO-SAR techniques. <span class="hl">Demonstrated the first 3D holographic imaging results in the literature</span> created using TI's single-chip mmWave radar sensors and custom-built two-axis SAR imager prototypes (with novel radar-scanner synchronization modules optimized for high-speed operations).</li>
+          <li><span class="hl">Developed a comprehensive signal processing toolbox in Matlab</span>, including fully automated data capture, sensor calibration, and computationally efficient near-field 3D holographic image reconstruction modules (<span class="hl">have >50K downloads</span>).</li>
+          <li>Conducted measurements with TI's various mmWave radar sensors (IWR1443, IWR6843, etc.), <span class="hl">created comprehensive Matlab repositories for processing real radar data (used by many researchers as a starting point)</span>, and performed numerous FMCW radar system trade studies (at chirp design level) to achieve the best performance in imaging applications.</li>
+          <li>Developed an advanced array signal processing chain for calibration, interference mitigation, and sky imaging for radio astronomy applications. <span class="hl">Created the first sky image using the LoFASM radio astronomy station</span> data and developed geolocalization algorithms of radio interferometers via tracking of wideband radio astronomical sources.</li>
+          <li>Teaching assistantship at EE/TE3350 Communications Systems course that covers signals and LTI systems, Fourier series and transform, baseband and passband signal representations, amplitude and frequency modulation, and sampling.</li>
         </ul>
       </div>
 
@@ -181,11 +181,11 @@
         </div>
         <div class="meta">Mar 2016 – Feb 2019</div>
         <ul class="bullets">
-          <li>Founded a start‑up to develop autonomous smart drones funded by TUBITAK Young Entrepreneur Program ($50K). Built fully functional prototypes; 1st place Spirit of Innovation Technology & Business Plan Competition 2019 ($5K); 4th place NVIDIA Jetson Developer Challenge 2018 (80 countries).</li>
-          <li>Developed low‑level navigation/flight control in C++ on FreeRTOS; implemented real‑time digital filters, Kalman estimators (3D pose), and PID controllers on ESP32.</li>
-          <li>Built a ROS‑centric framework on Linux‑based NVIDIA Jetson TX; developed localization/navigation using stereo vision and radar tracking; integrated TI IWR1443 mmWave radar for obstacle detection, altitude hold, and SAR imaging.</li>
-          <li>Implemented libraries for IMU, GPS, barometer, compass, ultrasound, Lidar; delivered accurate indoor/outdoor localization via Kalman‑based sensor fusion (strong Matlab Coder experience).</li>
-          <li>Implemented OpenCV‑based real‑time video pipelines and YOLO‑based deep learning on NVIDIA Jetson with CUDA for real‑time object tracking; added UDP data/video streaming.</li>
+          <li><span class="hl">Established and managed a start-up company to <strong>develop autonomous smart drones</strong></span> with funding from the Scientific and Technological Research Council of Türkiye (TUBITAK) Young Entrepreneur Program ($50K). The project has been completed successfully with fully functional prototypes. <strong>Took 1st place</strong> at the Spirit of Innovation Technology and Business Plan Competition 2019 ($5K). <strong>Took 4th place</strong> at the <span class="hl">NVIDIA Jetson Developer Challenge 2018</span> (submissions from 80 countries).</li>
+          <li><span class="hl">Built low-level navigation and flight control software in C++ on FreeRTOS</span>. Implemented real-time digital filters (low pass, differentiator, etc.), <span class="hl">Kalman estimators</span> (3D position and orientation), and PID controllers on the ESP32 microcontroller.</li>
+          <li><span class="hl">Built a Robot Operating System (ROS) centered development framework</span> on a Linux-based embedded NVIDIA Jetson TX platform. Developed advanced localization and navigation algorithms based on stereo vision and radar tracking for fully autonomous flight. Integrated TI’s IWR1443 mmWave radar for obstacle detection, altitude hold, and SAR imaging features.</li>
+          <li><span class="hl">Implemented libraries for onboard perception sensors (IMU, GPS, barometer, compass, ultrasound, and Lidar)</span> and developed accurate indoor and outdoor localization using Kalman-based sensor fusion (strong Matlab Coder experience).</li>
+          <li>Developed real-time video processing software with OpenCV and implemented deep learning algorithms (YOLO framework) with CUDA for real-time object tracking on NVIDIA Jetson. Developed wireless data and video streaming to host over UDP.</li>
         </ul>
       </div>
 
@@ -196,11 +196,11 @@
         </div>
         <div class="meta">Jun 2007 – Jul 2016</div>
         <ul class="bullets">
-          <li>Designed/implemented safety‑critical software (C++) and system products on Integrity RTOS for airborne platforms; built libraries for INS/GPS, airborne radar, and EO targeting; delivered sensor‑fusion, navigation, localization, control, and signal‑processing algorithms.</li>
-          <li>Developed system‑level requirements (safety/functional/performance/interface/certification) for Turkish trainer aircraft and utility helicopter programs; led systems engineering and requirements development with rigorous safety & operations assessments.</li>
-          <li>Performed conceptual design for advanced Integrated Modular Avionics (IMA) systems and software prototypes suitable for 5th‑gen fighters; represented Turkish aerospace industries in a multinational IMA project focused on dynamic mission reconfiguration.</li>
-          <li>Managed a 30+ member multi‑disciplinary team to deliver Aselsan’s first Infrared Search and Track (IRST) system for naval platforms; defined system requirements and architecture; executed model‑based design with SysML (CMMI® Level 3); used DOORS for requirements management.</li>
-          <li>Designed and implemented the navigation system for Türkiye’s first indigenous Coast Guard SAR ship platform, integrating 10+ sensors into a unified C2 system.</li>
+          <li><span class="hl">Designed and implemented safety-critical software (in C++) and system products</span> on real-time operating systems (Integrity) for airborne platforms. <span class="hl">Developed libraries for multiple onboard perception sensors</span> (INS/GPS, airborne radar, electro-optic targeting systems) and implemented novel sensor fusion, navigation, localization, control, and signal processing algorithms.</li>
+          <li>Developed high-level safety, functional, performance, interface, and certification requirements of the integrated modular avionics suite of the Turkish trainer aircraft and Turkish utility helicopter programs. <span class="hl">Led system engineering and requirements development for both programs</span>, applying rigorous system-level safety and operational needs assessments.</li>
+          <li>Performed conceptual design study (requirements development, functional analysis, and architecture design) <span class="hl">to develop an advanced integrated modular avionics (IMA) system and software prototypes</span> suitable for 5th-generation fighter aircraft. Represented Turkish aerospace industries in a multi-national project focusing on IMA systems (to perform dynamic reconfigurations during the mission for optimizing and adapting fighter avionics to different mission needs).</li>
+          <li><span class="hl">Managed a 30+ member multi-disciplinary team</span> (systems, software, mechanical, and optical) <span class="hl">to deliver Aselsan’s first infrared search and track (IRST) system for naval platforms</span> — a highly complex, multi-technology device. Defined detailed system requirements and device architecture, <span class="hl">performed model-based system analysis and design using the SysML</span> framework (CMMI® Level 3), and gained hands-on experience with <span class="hl">requirements management tools (DOORS)</span>.</li>
+          <li>Designed and implemented the navigation system module of Türkiye’s first indigenous Coast Guard search-and-rescue ship platform, <span class="hl">integrating 10+ different sensors (INS/GPS, navigation radar, etc.) into a unified command-and-control system</span>.</li>
         </ul>
       </div>
     </section>
